src/parser/TrumplangParser.js
// Generated from Trumplang.g4 by ANTLR 4.8
// jshint ignore: start
var antlr4 = require('antlr4/index');
var TrumplangListener = require('./TrumplangListener').TrumplangListener;
var TrumplangVisitor = require('./TrumplangVisitor').TrumplangVisitor;

var grammarFileName = "Trumplang.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "'BELIEVE ME'", "'MAKE AMERICA GREAT AGAIN'", 
                     "'I HAVE THE BEST'", "'ABSOLUTELY'", "'I HAVE A VERY GOOD BRAIN FOR'", 
                     "'HUGE'", "'BIGLY'", "'FAKE NEWS'", "'TWEET'", "'WALL'", 
                     "'DEAL'", "'INCREDIBLE'", "'PEOPLE TELL ME'", "'YOU'RE FIRED'", 
                     "'AND'", "'AND I MEAN THAT'", "'I CALL UPON'", "'LISTEN'", 
                     "'PEOPLE ARE SAYING'", "'NOBODY KNEW'", "'WE'RE GOING TO WIN IN A LANDSLIDE'", 
                     "'WE'RE GOING TO WIN, WIN, WIN'", "'WITH'", "'FROM'", 
                     "'TO'", "'BILLIONS AND BILLIONS'", "'YET'", "'FAKE NEWS MEDIA SAID ENOUGH'", 
                     "'BUILD THE WALL'", "'AND MEXICO WILL PAY FOR IT'", 
                     "'PREVAILS'", "'EVERYONE IS TALKING ABOUT'", "'MANY PEOPLE ARE ASKING'", 
                     "'MAKE'", "'GREATER'", "'SMALLER'", "'WRONG'", "'AND IT'S TRUE'", 
                     "'OR MAYBE'", "'SO TRUE'", "'TOTAL DISASTER'", "'BETTER THAN'", 
                     "'NOT AS GOOD AS'", "'AT LEAST AS GOOD AS'", "'NO BETTER THAN'", 
                     "'WINNING'", "'ENDORSING'", "'LOSING'", "'BIG LEAGUE TIMES'", 
                     "'SAD'", "'('", "')'", "'SECTION'", "'&'", "')!!'", 
                     "'FOLLOW'", "'FACT CHECK'", "'I KNOW THE BEST PEOPLE FROM'", 
                     "'I ONLY WANT'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, "VARIABLE", "IDENTIFIER", 
                      "STRING", "NUMBER", "BOOLEAN", "COMMENT", "FILEPATH", 
                      "WS" ];

var ruleNames =  [ "program", "statement", "commentStatement", "variableDeclaration", 
                   "constantDeclaration", "dataType", "functionDeclaration", 
                   "parameterList", "returnStatement", "functionCall", "argumentList", 
                   "ifStatement", "elseIfStatement", "elseStatement", "whileLoop", 
                   "forLoop", "forEachLoop", "loopBreak", "arrayDeclaration", 
                   "arrayElements", "assignmentStatement", "printStatement", 
                   "inputStatement", "incrementStatement", "decrementStatement", 
                   "condition", "comparison", "expression", "term", "factor", 
                   "arrayAccess", "dealField", "dealDeclaration", "dealAccess", 
                   "assertStatement", "importStatement", "selectiveImport" ];

function TrumplangParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

TrumplangParser.prototype = Object.create(antlr4.Parser.prototype);
TrumplangParser.prototype.constructor = TrumplangParser;

Object.defineProperty(TrumplangParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

TrumplangParser.EOF = antlr4.Token.EOF;
TrumplangParser.T__0 = 1;
TrumplangParser.T__1 = 2;
TrumplangParser.T__2 = 3;
TrumplangParser.T__3 = 4;
TrumplangParser.T__4 = 5;
TrumplangParser.T__5 = 6;
TrumplangParser.T__6 = 7;
TrumplangParser.T__7 = 8;
TrumplangParser.T__8 = 9;
TrumplangParser.T__9 = 10;
TrumplangParser.T__10 = 11;
TrumplangParser.T__11 = 12;
TrumplangParser.T__12 = 13;
TrumplangParser.T__13 = 14;
TrumplangParser.T__14 = 15;
TrumplangParser.T__15 = 16;
TrumplangParser.T__16 = 17;
TrumplangParser.T__17 = 18;
TrumplangParser.T__18 = 19;
TrumplangParser.T__19 = 20;
TrumplangParser.T__20 = 21;
TrumplangParser.T__21 = 22;
TrumplangParser.T__22 = 23;
TrumplangParser.T__23 = 24;
TrumplangParser.T__24 = 25;
TrumplangParser.T__25 = 26;
TrumplangParser.T__26 = 27;
TrumplangParser.T__27 = 28;
TrumplangParser.T__28 = 29;
TrumplangParser.T__29 = 30;
TrumplangParser.T__30 = 31;
TrumplangParser.T__31 = 32;
TrumplangParser.T__32 = 33;
TrumplangParser.T__33 = 34;
TrumplangParser.T__34 = 35;
TrumplangParser.T__35 = 36;
TrumplangParser.T__36 = 37;
TrumplangParser.T__37 = 38;
TrumplangParser.T__38 = 39;
TrumplangParser.T__39 = 40;
TrumplangParser.T__40 = 41;
TrumplangParser.T__41 = 42;
TrumplangParser.T__42 = 43;
TrumplangParser.T__43 = 44;
TrumplangParser.T__44 = 45;
TrumplangParser.T__45 = 46;
TrumplangParser.T__46 = 47;
TrumplangParser.T__47 = 48;
TrumplangParser.T__48 = 49;
TrumplangParser.T__49 = 50;
TrumplangParser.T__50 = 51;
TrumplangParser.T__51 = 52;
TrumplangParser.T__52 = 53;
TrumplangParser.T__53 = 54;
TrumplangParser.T__54 = 55;
TrumplangParser.T__55 = 56;
TrumplangParser.T__56 = 57;
TrumplangParser.T__57 = 58;
TrumplangParser.T__58 = 59;
TrumplangParser.VARIABLE = 60;
TrumplangParser.IDENTIFIER = 61;
TrumplangParser.STRING = 62;
TrumplangParser.NUMBER = 63;
TrumplangParser.BOOLEAN = 64;
TrumplangParser.COMMENT = 65;
TrumplangParser.FILEPATH = 66;
TrumplangParser.WS = 67;

TrumplangParser.RULE_program = 0;
TrumplangParser.RULE_statement = 1;
TrumplangParser.RULE_commentStatement = 2;
TrumplangParser.RULE_variableDeclaration = 3;
TrumplangParser.RULE_constantDeclaration = 4;
TrumplangParser.RULE_dataType = 5;
TrumplangParser.RULE_functionDeclaration = 6;
TrumplangParser.RULE_parameterList = 7;
TrumplangParser.RULE_returnStatement = 8;
TrumplangParser.RULE_functionCall = 9;
TrumplangParser.RULE_argumentList = 10;
TrumplangParser.RULE_ifStatement = 11;
TrumplangParser.RULE_elseIfStatement = 12;
TrumplangParser.RULE_elseStatement = 13;
TrumplangParser.RULE_whileLoop = 14;
TrumplangParser.RULE_forLoop = 15;
TrumplangParser.RULE_forEachLoop = 16;
TrumplangParser.RULE_loopBreak = 17;
TrumplangParser.RULE_arrayDeclaration = 18;
TrumplangParser.RULE_arrayElements = 19;
TrumplangParser.RULE_assignmentStatement = 20;
TrumplangParser.RULE_printStatement = 21;
TrumplangParser.RULE_inputStatement = 22;
TrumplangParser.RULE_incrementStatement = 23;
TrumplangParser.RULE_decrementStatement = 24;
TrumplangParser.RULE_condition = 25;
TrumplangParser.RULE_comparison = 26;
TrumplangParser.RULE_expression = 27;
TrumplangParser.RULE_term = 28;
TrumplangParser.RULE_factor = 29;
TrumplangParser.RULE_arrayAccess = 30;
TrumplangParser.RULE_dealField = 31;
TrumplangParser.RULE_dealDeclaration = 32;
TrumplangParser.RULE_dealAccess = 33;
TrumplangParser.RULE_assertStatement = 34;
TrumplangParser.RULE_importStatement = 35;
TrumplangParser.RULE_selectiveImport = 36;


function ProgramContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TrumplangParser.RULE_program;
    return this;
}

ProgramContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ProgramContext.prototype.constructor = ProgramContext;

ProgramContext.prototype.statement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatementContext);
    } else {
        return this.getTypedRuleContext(StatementContext,i);
    }
};

ProgramContext.prototype.enterRule = function(listener) {
    if(listener instanceof TrumplangListener ) {
        listener.enterProgram(this);
	}
};

ProgramContext.prototype.exitRule = function(listener) {
    if(listener instanceof TrumplangListener ) {
        listener.exitProgram(this);
	}
};

ProgramContext.prototype.accept = function(visitor) {
    if ( visitor instanceof TrumplangVisitor ) {
        return visitor.visitProgram(this);
    } else {
        return visitor.visitChildren(this);
    }
};




TrumplangParser.ProgramContext = ProgramContext;

TrumplangParser.prototype.program = function() {

    var localctx = new ProgramContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, TrumplangParser.RULE_program);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 74;
        this.match(TrumplangParser.T__0);
        this.state = 76; 
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
            this.state = 75;
            this.statement();
            this.state = 78; 
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        } while(((((_la - 3)) & ~0x1f) == 0 && ((1 << (_la - 3)) & ((1 << (TrumplangParser.T__2 - 3)) | (1 << (TrumplangParser.T__4 - 3)) | (1 << (TrumplangParser.T__11 - 3)) | (1 << (TrumplangParser.T__15 - 3)) | (1 << (TrumplangParser.T__16 - 3)) | (1 << (TrumplangParser.T__17 - 3)) | (1 << (TrumplangParser.T__20 - 3)) | (1 << (TrumplangParser.T__21 - 3)) | (1 << (TrumplangParser.T__25 - 3)) | (1 << (TrumplangParser.T__27 - 3)) | (1 << (TrumplangParser.T__28 - 3)) | (1 << (TrumplangParser.T__31 - 3)) | (1 << (TrumplangParser.T__32 - 3)) | (1 << (TrumplangParser.T__33 - 3)))) !== 0) || ((((_la - 57)) & ~0x1f) == 0 && ((1 << (_la - 57)) & ((1 << (TrumplangParser.T__56 - 57)) | (1 << (TrumplangParser.T__57 - 57)) | (1 << (TrumplangParser.T__58 - 57)) | (1 << (TrumplangParser.VARIABLE - 57)) | (1 << (TrumplangParser.COMMENT - 57)))) !== 0));
        this.state = 80;
        this.match(TrumplangParser.T__1);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function StatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TrumplangParser.RULE_statement;
    return this;
}

StatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementContext.prototype.constructor = StatementContext;

StatementContext.prototype.importStatement = function() {
    return this.getTypedRuleContext(ImportStatementContext,0);
};

StatementContext.prototype.selectiveImport = function() {
    return this.getTypedRuleContext(SelectiveImportContext,0);
};

StatementContext.prototype.variableDeclaration = function() {
    return this.getTypedRuleContext(VariableDeclarationContext,0);
};

StatementContext.prototype.constantDeclaration = function() {
    return this.getTypedRuleContext(ConstantDeclarationContext,0);
};

StatementContext.prototype.functionDeclaration = function() {
    return this.getTypedRuleContext(FunctionDeclarationContext,0);
};

StatementContext.prototype.functionCall = function() {
    return this.getTypedRuleContext(FunctionCallContext,0);
};

StatementContext.prototype.ifStatement = function() {
    return this.getTypedRuleContext(IfStatementContext,0);
};

StatementContext.prototype.whileLoop = function() {
    return this.getTypedRuleContext(WhileLoopContext,0);
};

StatementContext.prototype.forLoop = function() {
    return this.getTypedRuleContext(ForLoopContext,0);
};

StatementContext.prototype.forEachLoop = function() {
    return this.getTypedRuleContext(ForEachLoopContext,0);
};

StatementContext.prototype.arrayDeclaration = function() {
    return this.getTypedRuleContext(ArrayDeclarationContext,0);
};

StatementContext.prototype.assignmentStatement = function() {
    return this.getTypedRuleContext(AssignmentStatementContext,0);
};

StatementContext.prototype.incrementStatement = function() {
    return this.getTypedRuleContext(IncrementStatementContext,0);
};

StatementContext.prototype.decrementStatement = function() {
    return this.getTypedRuleContext(DecrementStatementContext,0);
};

StatementContext.prototype.printStatement = function() {
    return this.getTypedRuleContext(PrintStatementContext,0);
};

StatementContext.prototype.inputStatement = function() {
    return this.getTypedRuleContext(InputStatementContext,0);
};

StatementContext.prototype.returnStatement = function() {
    return this.getTypedRuleContext(ReturnStatementContext,0);
};

StatementContext.prototype.commentStatement = function() {
    return this.getTypedRuleContext(CommentStatementContext,0);
};

StatementContext.prototype.loopBreak = function() {
    return this.getTypedRuleContext(LoopBreakContext,0);
};

StatementContext.prototype.assertStatement = function() {
    return this.getTypedRuleContext(AssertStatementContext,0);
};

StatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof TrumplangListener ) {
        listener.enterStatement(this);
	}
};

StatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof TrumplangListener ) {
        listener.exitStatement(this);
	}
};

StatementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof TrumplangVisitor ) {
        return visitor.visitStatement(this);
    } else {
        return visitor.visitChildren(this);
    }
};




TrumplangParser.StatementContext = StatementContext;

TrumplangParser.prototype.statement = function() {

    var localctx = new StatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, TrumplangParser.RULE_statement);
    try {
        this.state = 102;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,1,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 82;
            this.importStatement();
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 83;
            this.selectiveImport();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 84;
            this.variableDeclaration();
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 85;
            this.constantDeclaration();
            break;

        case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 86;
            this.functionDeclaration();
            break;

        case 6:
            this.enterOuterAlt(localctx, 6);
            this.state = 87;
            this.functionCall();
            break;

        case 7:
            this.enterOuterAlt(localctx, 7);
            this.state = 88;
            this.ifStatement();
            break;

        case 8:
            this.enterOuterAlt(localctx, 8);
            this.state = 89;
            this.whileLoop();
            break;

        case 9:
            this.enterOuterAlt(localctx, 9);
            this.state = 90;
            this.forLoop();
            break;

        case 10:
            this.enterOuterAlt(localctx, 10);
            this.state = 91;
            this.forEachLoop();
            break;

        case 11:
            this.enterOuterAlt(localctx, 11);
            this.state = 92;
            this.arrayDeclaration();
            break;

        case 12:
            this.enterOuterAlt(localctx, 12);
            this.state = 93;
            this.assignmentStatement();
            break;

        case 13:
            this.enterOuterAlt(localctx, 13);
            this.state = 94;
            this.incrementStatement();
            break;

        case 14:
            this.enterOuterAlt(localctx, 14);
            this.state = 95;
            this.decrementStatement();
            break;

        case 15:
            this.enterOuterAlt(localctx, 15);
            this.state = 96;
            this.printStatement();
            break;

        case 16:
            this.enterOuterAlt(localctx, 16);
            this.state = 97;
            this.inputStatement();
            break;

        case 17:
            this.enterOuterAlt(localctx, 17);
            this.state = 98;
            this.returnStatement();
            break;

        case 18:
            this.enterOuterAlt(localctx, 18);
            this.state = 99;
            this.commentStatement();
            break;

        case 19:
            this.enterOuterAlt(localctx, 19);
            this.state = 100;
            this.loopBreak();
            break;

        case 20:
            this.enterOuterAlt(localctx, 20);
            this.state = 101;
            this.assertStatement();
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function CommentStatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TrumplangParser.RULE_commentStatement;
    return this;
}

CommentStatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
CommentStatementContext.prototype.constructor = CommentStatementContext;

CommentStatementContext.prototype.COMMENT = function() {
    return this.getToken(TrumplangParser.COMMENT, 0);
};

CommentStatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof TrumplangListener ) {
        listener.enterCommentStatement(this);
	}
};

CommentStatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof TrumplangListener ) {
        listener.exitCommentStatement(this);
	}
};

CommentStatementContext.prototype.accept = function(visitor) {
    if ( visitor instanceof TrumplangVisitor ) {
        return visitor.visitCommentStatement(this);
    } else {
        return visitor.visitChildren(this);
    }
};




TrumplangParser.CommentStatementContext = CommentStatementContext;

TrumplangParser.prototype.commentStatement = function() {

    var localctx = new CommentStatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, TrumplangParser.RULE_commentStatement);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 104;
        this.match(TrumplangParser.COMMENT);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function VariableDeclarationContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TrumplangParser.RULE_variableDeclaration;
    return this;
}

VariableDeclarationContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
VariableDeclarationContext.prototype.constructor = VariableDeclarationContext;

VariableDeclarationContext.prototype.dataType = function() {
    return this.getTypedRuleContext(DataTypeContext,0);
};

VariableDeclarationContext.prototype.VARIABLE = function() {
    return this.getToken(TrumplangParser.VARIABLE, 0);
};

VariableDeclarationContext.prototype.expression = function() {
    return this.getTypedRuleContext(ExpressionContext,0);
};

VariableDeclarationContext.prototype.dealDeclaration = function() {
    return this.getTypedRuleContext(DealDeclarationContext,0);
};

VariableDeclarationContext.prototype.enterRule = function(listener) {
    if(listener instanceof TrumplangListener ) {
        listener.enterVariableDeclaration(this);
	}
};

VariableDeclarationContext.prototype.exitRule = function(listener) {
    if(listener instanceof TrumplangListener ) {
        listener.exitVariableDeclaration(this);
	}
};

VariableDeclarationContext.prototype.accept = function(visitor) {
    if ( visitor instanceof TrumplangVisitor ) {
        return visitor.visitVariableDeclaration(this);
    } else {
        return visitor.visitChildren(this);
    }
};




TrumplangParser.VariableDeclarationContext = VariableDeclarationContext;

TrumplangParser.prototype.variableDeclaration = function() {

    var localctx = new VariableDeclarationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, TrumplangParser.RULE_variableDeclaration);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 106;
        this.match(TrumplangParser.T__2);
        this.state = 107;
        this.dataType();
        this.state = 108;
        this.match(TrumplangParser.VARIABLE);
        this.state = 109;
        this.match(TrumplangParser.T__3);
        this.state = 112;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
        switch(la_) {
        case 1:
            this.state = 110;
            this.expression(0);
            break;

        case 2:
            this.state = 111;
            this.dealDeclaration();
            break;
